--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+
+/* font-family: 'Epilogue', sans-serif; */
+/* font-family: 'Work Sans', sans-serif; */
+
 *, *::before, *::after {
     box-sizing: border-box;
 }
@@ -9,12 +13,191 @@
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
+    font-family: 'Work Sans', sans-serif;
 }
-/* 
+
 img, picture, svg, video {
     display: block;
-    max-width: 100%;
-} */
+    /* max-width: 100%; */
+}
+
+.page {
+    display: flex;
+    height: 100%;
+    position: relative;
+}
+
+.image-left {
+    flex: 1;
+    background-image: url(./img/josh-hild-hqS36g6btN8-unsplash.jpg);
+    background-size: cover;
+    /* position: relative; */
+    transition: all 0.9s ease-in-out;
+}
+
+.image-left:hover {
+    flex: 1.2;
+}
 
 
+.image-logo {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100px;
+}
+
+.content-right {
+    flex: 3;
+    padding-left: 5%;
+    padding-top: 2%;
+    padding-bottom: 3%;
+    overflow: scroll;
+}
+
+.content-display-text {
+    margin-bottom: 3%;
+}
+
+.content-title {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 10rem;
+    font-weight: 500;
+    margin-bottom: 2%;
+}
+
+.content-paragraph {
+    width: clamp(30ch, 100%, 45ch);
+    margin-bottom: 2ch;
+}
+
+.create-acc-form {
+
+}
+
+.form-title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 3%;
+}
+
+section > div {
+    flex-basis: 40%;
+    margin-bottom: 1ch;
+    min-width: 300px;
+}
+
+label {
+    font-size: 0.7em;
+    display: block;
+    line-height: 2rem;
+    padding: 2px 0px;
+}
+
+input {
+    height: 2.5rem;
+    font-size: 1.5rem;
+    width: calc(100%);
+    padding: 2px 10px;
+    letter-spacing: 0.5rem;
+    border: 1px solid #d9dbdf;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+}
+
+#email {
+    font-size: 1.1rem;
+    letter-spacing: 0.2rem;
+}
+
+input:invalid:hover {
+    border: 1px solid #bcbdbe;
+}
+
+input:focus {
+    outline: none;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
+#email, 
+#phone,
+#pwd,
+#pwd-confirm {
+    border-width: 2px;
+}
+
+.field:focus:invalid {
+    border: 1px solid pink;
+}
+
+.field:required:valid {
+    border: 1px solid rgb(78, 166, 78);
+}
+
+input::placeholder {
+    color: rgb(205, 205, 205);
+}
+
+select {
+    height: 2.5rem;
+    border-radius: 4px;
+    border: 1px solid #4b4d50;
+}
+
+button[type=submit] {
+    padding: 15px 55px;
+    margin-bottom: 2rem;
+    font-weight: 500;
+    background-color: #1f3134;
+    color: rgb(255, 228, 192);
+    border: 1px solid rgb(195, 195, 195);
+    border-radius: 5px;
+    transition: background-color 0.1s ease-in;
+    transition: transform 0.1s ease-out;
+
+}
+
+button[type=submit]:hover {
+    background-color: #2e474c;
+    cursor: pointer;
+}
+
+button[type=submit]:active {
+    transform: scale(0.97);
+}
+
+.alternate-button {
+    color: #4b4d50;
+}
+
+.alternate-button > a {
+    text-decoration: none;
+    color: rgb(11, 85, 107);
+}
+
+.phone-div {
+    display: flex;
+    gap: 5px;
+}
+
+.passed {
+    border: 1px solid rgb(78, 166, 78);
+}
+
+.error-msg {
+    margin-left: 10px;
+    color: rgb(197, 68, 89);
+}
+
+/* border: 1px solid #4b4d50; */
+
+.required-msg {
+    font-size: 0.8rem;
+}
